--- a/resources/style.css
+++ b/resources/style.css
@@ -7,10 +7,11 @@ html {
 }
 
 body {
-    margin: auto 50vh auto 0;
+    margin: auto;
 }
 
 h1 {
+    margin: 50vh 0 0 0;
     text-align: center;
     transition: all 1s;
 }
